src2/objects/ServiceContractMirror__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>IF(ISBLANK( Account__c ),&quot;&quot;, Account__r.AccountNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contracts_Mirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivationDate__c</fullName>
        <label>Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Approval Process</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Service_Contracts_Mirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Id__c</fullName>
        <label>Contract Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GrandTotal__c</fullName>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LineItemCount__c</fullName>
        <label>Line Items</label>
        <summaryForeignKey>ContractLineItemMirror__c.ServiceContractMirror__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ParentServiceContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Service Contract</label>
        <referenceTo>ServiceContractMirror__c</referenceTo>
        <relationshipName>ChildServiceContractsMirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipName>Service_Contracts_Mirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RootServiceContractId__c</fullName>
        <label>Root Service Contract Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceContractId__c</fullName>
        <externalId>true</externalId>
        <label>Service Contract Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceContractUUID__c</fullName>
        <externalId>true</externalId>
        <label>Service Contract UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipName>Service_Contracts_Mirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippingHandling__c</fullName>
        <label>Shipping and Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SpecialTerms__c</fullName>
        <label>Special Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <summarizedField>ContractLineItemMirror__c.Subtotal__c</summarizedField>
        <summaryForeignKey>ContractLineItemMirror__c.ServiceContractMirror__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term (months)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Total Price</label>
        <summarizedField>ContractLineItemMirror__c.TotalPrice__c</summarizedField>
        <summaryForeignKey>ContractLineItemMirror__c.ServiceContractMirror__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Service Contract</label>
    <nameField>
        <label>Contract Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>